# synapse

./: .build.yml  .dockerignore  .gitignore  .travis.yml  CNAME  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.musl  LICENSE  Makefile  README.md  build.rs  config.toml  example_config.toml  index.html  index.md  sycli_config.toml
.github/workflows/: rust.yml
_layouts/: base.html
adns/: Cargo.toml
adns/src/: lib.rs
axon/: Cargo.toml
axon/src/: config.rs  disk.rs  handle.rs  lib.rs  manager.rs  message.rs  peer.rs  peer_conn.rs  piece_field.rs  pool.rs  torrent.rs  worker.rs
axon/src/peer/: message.rs  mod.rs  peer_conn.rs  peer_old.rs  reader.rs  writer.rs
axon/src/torrent/: mod.rs  picker.rs
bencode/: Cargo.toml
bencode/src/: lib.rs
ci/: install.sh  script.sh  util.sh
doc/: HACKING  RPC
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bencode_roundtrip.rs
native/: fallocate_darwin.c  fallocate_linux.c  fallocate_posix.c  mmap.c
protocol/: Cargo.toml
protocol/src/: lib.rs  parser.rs
rpc/: Cargo.toml
rpc/src/: criterion.rs  lib.rs  message.rs  resource.rs
session/: Cargo.toml
session/src/: lib.rs
sha1/: Cargo.toml  build.rs
sha1/benches/: lib.rs
sha1/src/: consts.rs  generic.c  lib.rs  simd.rs
sha1/tests/: lib.rs
share/synapse/applications/: synapse.desktop
src/: args.rs  bencode.rs  buffers.rs  config.rs  control.rs  disk.rs  ev_loop.rs  handle.rs  init.rs  listener.rs  log.rs  main.rs  manager.rs  message.rs  peer.rs  piece_field.rs  rpc.rs  session.rs  socket.rs  stat.rs  throttle.rs  torrent.rs  tracker.rs  util.rs
src/control/: acio.rs  cio.rs  job.rs  mod.rs
src/disk/: cache.rs  job.rs  mod.rs
src/rpc/: client.rs  errors.rs  mod.rs  processor.rs  proto.rs  reader.rs  transfer.rs  writer.rs
src/rpc/proto/: criterion.rs  message.rs  mod.rs  resource.rs  ws.rs
src/torrent/: announcer.rs  bitfield.rs  choker.rs  info.rs  mod.rs  parse.rs  picker.rs  piece_field.rs  tracker.rs
src/torrent/peer/: message.rs  mod.rs  reader.rs  writer.rs
src/torrent/picker/: mod.rs  rarest.rs  sequential.rs  tests.rs
src/torrent/tracker/: http.rs  mod.rs  udp.rs
src/tracker/: dns.rs  errors.rs  http.rs  mod.rs  udp.rs
src/tracker/dht/: mod.rs  proto.rs  rt.rs
src/tracker/dht/test/: announce  find  get  id  ping  proto_test.plat
src/tracker/http/: mod.rs  reader.rs  writer.rs
src/tracker/udp/: mod.rs
src/util/: aview.rs  http.rs  io.rs  mod.rs  native.rs
sstream/: Cargo.toml
sstream/src/: lib.rs  no_verify_tls.rs
sycli/: Cargo.toml
sycli/src/: client.rs  cmd.rs  config.rs  error.rs  main.rs
synulator/: Cargo.toml
synulator/src/: main.rs  state.rs
systat/: Cargo.toml
systat/src/: main.rs
tests/: tests.rs
tests/autobahn/: client-results.json  fuzzingclient.json
