[package]
name = "synapse"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]
build = "build.rs"

[workspace]
members = ["sycli", "rpc"]

[build-dependencies]
cc = "1.0"

[dependencies]
synapse-rpc = { path = "rpc" }
sha1 = { path = "sha1" }
byteorder = "1.0"
lazy_static = "*"
rand = "0.3"
ring = "0.11"
url = "1.4.0"
net2 = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
bincode = "0.8"
ctrlc = "3.0"
c-ares = "2"
httparse = "1.2.3"
base64 = "0.6.0"
base32 = "0.3.1"
shellexpand = "1.0.0"
openssl = "0.9"
clippy = {version = "*", optional = true}
fs_extra = "1.0"
fnv = "1.0"
metrohash = "1.0"
memmap = "0.5"
vecio = "0.1"
libc = "0.2"

[dependencies.amy]
version = "0.8.0"
default-features = false
features = ["no_timerfd"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]

[dependencies.num]
git = "https://github.com/rust-num/num"
branch = "next"
default-features = false
features = ["bigint", "serde"]

[dependencies.error-chain]
version = "0.10"
default-features = false
features = []

[profile.bench]
opt-level = 3
debug = true
debug-assertions = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
panic = 'unwind'

[features]
default = []
autobahn = []
