[package]
name = "axon"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]

[dependencies]
byteorder = "0.5"
vecio = "0.1"
lazy_static = "0.1"
rand = "0.3"
sha1 = "0.2"
mio = "0.6"
slab = "0.3"

[profile.bench]
opt-level = 3
debug = true
rpath = true
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.release]
opt-level = 3
debug = true
rpath = true
lto = true
debug-assertions = true
codegen-units = 1
panic = 'unwind'
