[package]
name = "synapse-rpc"
description = "RPC data structures used by synapse"
version = "0.1.21"
authors = ["Luminarys <postmaster@gensok.io>"]
license = "ISC"
repository = "https://github.com/Luminarys/synapse"
edition = "2018"

[lib]
name = "synapse_rpc"

[features]
default = []

[dependencies]
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "1"
url_serde = "0.2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "serde"]
