[package]
name = "synapse-session"
description = "On disk metadata structures used by synapse"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]
license = "ISC"
repository = "https://github.com/Luminarys/synapse"
edition = "2018"

[lib]
name = "synapse_session"

[dependencies]
serde = "1"
serde_derive = "1"
bincode = "1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]
