[package]
name = "sycli"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]

[dependencies]
synapse-rpc = { path = "../rpc" }
synapse-bencode = { path = "../bencode" }
clap = "2"
serde = "1"
serde_json = "1"
serde_derive = "1"
tungstenite = "0.6.0"
reqwest = "0.9"
url = "1.5.1"
prettytable-rs = "0.7.0"
shellexpand = "1"
toml = "0.4"

[dependencies.error-chain]
version = "0.12"
default-features = false
features = []
