[package]
name = "sycli"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]
edition = "2018"

[dependencies]
synapse-rpc = { path = "../rpc" }
synapse-bencode = { path = "../bencode" }
sstream = { path = "../sstream" }
clap = "2"
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = "0.9"
url = "2.1"
prettytable-rs = "0.8"
shellexpand = "1"
toml = "0.5"
sha-1 = "0.8"
base64 = "0.11"
regex = "1"

[dependencies.tungstenite]
version = "0.11"
default-features = false
features = []


[dependencies.error-chain]
version = "0.12"
default-features = false
features = []
